syntax = "proto3";
option csharp_namespace = "Sentry.AspNetCore.Grpc.Tests";

service TestService {
  rpc Test(TestRequest) returns (TestResponse);
  rpc TestThrow(TestRequest) returns (TestResponse);
}

message TestRequest {

}

message TestMessage {
  string test = 1;
}

message TestResponse {
  bool result = 1;
  TestMessage message = 2;
}
